--- a/src/platform/android/res/layout/activity_main.xml
+++ b/src/platform/android/res/layout/activity_main.xml
@@ -1,44 +1,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:alpha="0.4"
     android:background="@drawable/bg_temp"
     android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="60dp"
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="23dp"
+        android:background="@android:color/transparent"
         android:gravity="center"
-        android:text="@string/app_name"
+        android:onClick="startQuickOfflineMatch"
         android:textColor="@android:color/white"
-        android:textSize="32sp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/start_quick_match_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/button1"
+        android:layout_alignLeft="@+id/button1"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:onClick="startQuickMatch"
-        android:text="@string/start_quick_match"
         android:textColor="@android:color/white"
-        android:textStyle="bold" >
-    </Button>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/start_quick_match_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:onClick="startQuickOfflineMatch"
-        android:text="@string/start_quick_offline_match"
-        android:textColor="@android:color/white"
-        android:textStyle="bold" >
-    </Button>
+        android:textStyle="bold" />
 
 </RelativeLayout>
