--- a/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/GamePage.xaml
+++ b/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/GamePage.xaml
@@ -15,7 +15,7 @@
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Black">
-        <DrawingSurface x:Name="DrawingSurface" Loaded="DrawingSurface_Loaded" />
+        <DrawingSurfaceBackgroundGrid x:Name="DrawingSurface" Loaded="DrawingSurface_Loaded" />
     </Grid>
 
 </phone:PhoneApplicationPage>
