--- a/src/platform/android/res/layout/activity_main.xml
+++ b/src/platform/android/res/layout/activity_main.xml
@@ -6,29 +6,24 @@
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="217dp"
+        android:layout_height="42dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="23dp"
-        android:background="@android:color/transparent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:background="@drawable/button_offline_match_selector"
         android:gravity="center"
-        android:onClick="startQuickOfflineMatch"
-        android:text="@string/start_quick_offline_match"
-        android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        android:onClick="startQuickOfflineMatch" />
 
     <Button
         android:id="@+id/start_quick_match_button"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="217dp"
+        android:layout_height="42dp"
         android:layout_above="@+id/button1"
         android:layout_alignLeft="@+id/button1"
-        android:background="@android:color/transparent"
+        android:background="@drawable/button_online_match_selector"
         android:gravity="center"
-        android:onClick="startQuickMatch"
-        android:text="@string/start_quick_match"
-        android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        android:onClick="startQuickMatch" />
 
 </RelativeLayout>
