--- a/src/platform/android/res/layout/activity_main.xml
+++ b/src/platform/android/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_height="42dp"
         android:layout_above="@+id/button1"
         android:layout_alignLeft="@+id/button1"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/button_online_match_selector"
         android:gravity="center"
         android:onClick="startQuickMatch" />
