--- a/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/ButtonImage.xaml
+++ b/src/platform/windows-phone/BomberParty/BomberParty/BomberParty/ButtonImage.xaml
@@ -1,4 +1,4 @@
-﻿<Button x:Class="BomberParty.ButtonImage"
+﻿<Button x:Class="BattleBombs.ButtonImage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         IsEnabledChanged="ButtonIsEnabledChanged"
