--- a/src/platform/android/res/layout/activity_game.xml
+++ b/src/platform/android/res/layout/activity_game.xml
@@ -11,4 +11,11 @@
         android:orientation="vertical" >
     </LinearLayout>
 
+    <fragment
+        android:id="@+id/adFragment"
+        android:name="com.technegames.battlebombs.BaseGameActivity.MyActivity$AdFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true" />
+
 </RelativeLayout>
